third_party/move/tools/move-package-manifest/tests/addresses/invalid-address-name-numerical-prefix.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [addresses]
6 | "0foo" = ""
  | ^^^^^^ Invalid named address -- must start with a letter or _; only letters, digits, and _ allowed.
  |
